welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if buggle estfacemur(){
   ^Program:9: error: illegal start of simple expression
	}
        ^