welcome.lessons.welcome.conditions.Conditions.scala.code
if buggle estfacemur(){
	recule()
}else{
	avance()
}
